WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174146
ProcessingInstruction::clearExistingCachedSheet doesn't really exist.
https://bugs.webkit.org/show_bug.cgi?id=174146
Summary
ProcessingInstruction::clearExistingCachedSheet doesn't really exist.
Emilio Cobos Álvarez
Reported
2017-07-04 20:55:20 PDT
I don't see any definition nor call for it. Also discovered while investigating
bug 172753
(you can't misgrep fast enough).
Attachments
Patch
(1.28 KB, patch)
2017-07-04 20:57 PDT
,
Emilio Cobos Álvarez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Emilio Cobos Álvarez
Comment 1
2017-07-04 20:57:49 PDT
Created
attachment 314595
[details]
Patch
WebKit Commit Bot
Comment 2
2017-07-05 09:12:02 PDT
Comment on
attachment 314595
[details]
Patch Clearing flags on attachment: 314595 Committed
r219130
: <
http://trac.webkit.org/changeset/219130
>
WebKit Commit Bot
Comment 3
2017-07-05 09:12:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug