ProcessingInstruction::clearExistingCachedSheet doesn't really exist. https://bugs.webkit.org/show_bug.cgi?id=174146

Patch by Emilio Cobos Álvarez <ecobos@igalia.com> on 2017-07-05
Reviewed by Chris Dumez.

No new tests (no functionality change).

* dom/ProcessingInstruction.h: Remove dead declaration.

Canonical link: https://commits.webkit.org/190982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219130 268f45cc-cd09-0410-ab3c-d52691b4dbfc